classDiagram

namespace PkgSanction {
  class SanctionAbsence
  class ReglesDeSanction
  class Notification
}

class SanctionAbsence{
  + id: int
  + dateDebut: date
  + statut: string
}

class ReglesDeSanction{
  + id: int
  + titre: string
  + description: string
  + absencesMax: int
  + penalite: string
  + seuilDeNotification: int
  + duree: int
  + note: string
}

class Notification {
   + id: int
   + message: string
   + horodatage: date
}

namespace PkgUtilisateurs {
class Apprenant
class ResponsableDesApprenants
}

namespace PkgAbsence {
  class Absence
  class Seance
  class JustificationAbsence
}
 
namespace PkgEmploiTemps {
  class DureeSeance
}

Absence -- Apprenant
Seance "1" -- "*" Absence
Seance  --> "1" DureeSeance

JustificationAbsence --  "1" justifAbsence

ReglesDeSanction "1" --> "0..*" SanctionAbsence : "s'applique à"
SanctionAbsence "1..*" --> "1..*" Notification : "déclenche"
SanctionAbsence "1" --> "1" Apprenant : "s'applique à"
Apprenant "0..*" --> "0..*" Notification : "reçoit"
ResponsableDesApprenants "1" --> "0..*" Notification : "reçoit"


